Non float images have float buffers if displayed in the Image Editor once #95871

Closed
opened 2022-02-18 14:15:45 +01:00 by Philipp Oeser · 4 comments
Member

System Information
Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits
Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44

Blender Version
Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-18 07:30, hash: 4ad4d8a59c
Broken: 3.1beta
Worked: 3.0.1

Caused by bdd74e1e93

Short description of error
Non float images have float buffers if displayed in the Image Editor once

Exact steps for others to reproduce the error

  • go to the shading workspace
  • add an image texture and load any 8bit image
  • bpy.images['myImage'].is_float should be False
  • select that image in the Image Editor
  • bpy.images['myImage'].is_float is now True

So the ImBuf now has a rect_float and this will not go away (also not when no Image Editor is shown)
This is misleading, checking this in python is now unreliable and this also has other consequences such as the Half Float Precision option always showing for such images.

noticed in #95865

**System Information** Operating system: Linux-5.13.0-0.rc6.45.fc35.x86_64-x86_64-with-glibc2.34.9000 64 Bits Graphics card: NVIDIA GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.44 **Blender Version** Broken: version: 3.2.0 Alpha, branch: master, commit date: 2022-02-18 07:30, hash: `4ad4d8a59c` Broken: 3.1beta Worked: 3.0.1 Caused by bdd74e1e93 **Short description of error** Non float images have float buffers if displayed in the Image Editor once **Exact steps for others to reproduce the error** - go to the shading workspace - add an image texture and load any 8bit image - `bpy.images['myImage'].is_float` should be `False` - select that image in the Image Editor - `bpy.images['myImage'].is_float` is now `True` So the `ImBuf` now has a `rect_float` and this will not go away (also not when no Image Editor is shown) This is misleading, checking this in python is now unreliable and this also has other consequences such as the `Half Float Precision` option always showing for such images. noticed in #95865
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Jeroen Bakker was assigned by Philipp Oeser 2022-02-18 14:16:30 +01:00

This issue was referenced by bce810f057

This issue was referenced by bce810f05763b3ccf9f7331e96541be2df38f29b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:07 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#95871
No description provided.